Styles structure is set moving forward

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,6 @@ body {
 
 @import "./partials/variables";
 @import "./partials/header";
+@import "./partials/form";
+@import "./partials/hero";
+@import "./partials/populartopics";
