--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,4 @@ body {
 @import "./partials/form";
 @import "./partials/hero";
 @import "./partials/populartopics";
+@import "./partials/create-new-form";
