added pop up form

--- a/src/styles/partials/_create-new-form.scss
+++ b/src/styles/partials/_create-new-form.scss
@@ -19,7 +19,7 @@
     &-div {
       display: flex;
       justify-items: center;
-      -webkit-writing-mode: horizontal-tb !important;
+      // -webkit-writing-mode: horizontal-tb !important;
       text-rendering: auto;
       color: initial;
       letter-spacing: normal;
