--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,5 @@ body {
 @import "./partials/header";
 @import "./partials/form";
 @import "./partials/hero";
+@import "./partials/chart";
 @import "./partials/populartopics";
