--- a/src/styles/partials/_create-new-form.scss
+++ b/src/styles/partials/_create-new-form.scss
@@ -1,11 +1,11 @@
 .modal {
-  position: fixed;
+  position: absolute;
   font-family: avenir;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
-  top: 0;
+  bottom: 0;
   &__content {
     padding: 0 5%;
     opacity: 1;
@@ -84,9 +84,11 @@
 }
 
 .add-post__icon {
-  width: 100%;
-  background-color: $TEDRED;
-  color: white;
+  width: 380px;
+  margin: $center;
+  background-color: white;
+  border: 1px solid $TEDRED;
+  color: $TEDRED;
   height: 40px;
   margin-bottom: 20px;
   border-radius: 5px;
@@ -127,7 +129,8 @@
 }
 
 .add-post {
-  width: 80px;
+  width: 100%;
+  display: flex;
   height: 40px;
   border-radius: 40px;
   right: 64px;
